--- a/ConvertZZ/MainWindow.xaml
+++ b/ConvertZZ/MainWindow.xaml
@@ -24,8 +24,8 @@
             <Separator Visibility="Collapsed"/>
             <MenuItem Header="Audio標籤轉換">
                 <MenuItem Uid="c1" Header="ID3" Click="MenuItem_Click"/>
-                <MenuItem Uid="c2" Header="APE" Click="MenuItem_Click"/>
-                <MenuItem Uid="c3" Header="OGG" Click="MenuItem_Click"/>
+                <MenuItem Visibility="Collapsed" Uid="c2" Header="APE" Click="MenuItem_Click"/>
+                <MenuItem Visibility="Collapsed" Uid="c3" Header="OGG" Click="MenuItem_Click"/>
             </MenuItem>
             <Separator/>
             <MenuItem Header="其他">
