--- a/ConvertZZ/Pages/Page_File.xaml
+++ b/ConvertZZ/Pages/Page_File.xaml
@@ -136,7 +136,7 @@
         <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth1" Margin="20,4,20,20"  Grid.Row="1" Grid.Column="2" Grid.RowSpan="2"  VerticalAlignment="Stretch">
             <TextBox Text="{Binding OutputPreviewText}" TextWrapping="Wrap" AcceptsReturn="True" Grid.Row="1" Grid.Column="2" Grid.RowSpan="2"  VerticalScrollBarVisibility="Auto" />
         </materialDesign:Card>
-        <Button Content="轉換" Grid.Row="3" Padding="5" Margin="20,10,20,0" Click="Button_Convert_ClickAsync"/>
+        <Button materialDesign:ButtonProgressAssist.Value="{Binding DismissButtonProgress}"  materialDesign:ButtonProgressAssist.IsIndicatorVisible="True" Content="轉換" Grid.Row="3" Padding="5" Margin="20,10,20,0" Click="Button_Convert_ClickAsync"/>
         <Grid  Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
