--- a/ConvertZZ/Window_About.xaml
+++ b/ConvertZZ/Window_About.xaml
@@ -6,14 +6,20 @@
         mc:Ignorable="d"
         Title="About" MinHeight="200" MinWidth="350" ResizeMode="NoResize" Topmost="True" SizeToContent="WidthAndHeight">
     <StackPanel>
-        <StackPanel Orientation="Horizontal" Margin="5">
+        
+        <Grid Margin="5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
             <Grid Width="100" Height="150" MouseUp="Label_MouseUp">
                 <Grid.Background>
                     <ImageBrush ImageSource="icon.ico" Stretch="Uniform"/>
                 </Grid.Background>
             </Grid>
-            <Label Content="ConvertZZ" FontSize="40" FontFamily="Arial" VerticalAlignment="Center" MouseUp="Label_MouseUp"/>
-        </StackPanel>
+            <Label Content="ConvertZZ" Grid.Column="1" FontSize="40" FontFamily="Arial" VerticalAlignment="Center" MouseUp="Label_MouseUp"/>
+            <Label Name="Version" Content="v1.0.0.0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+        </Grid>
         <Grid Margin="5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
