添加設定頁面Tooltip說明

--- a/ConvertZZ/Window_Setting.xaml
+++ b/ConvertZZ/Window_Setting.xaml
@@ -33,15 +33,15 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Content="懸浮球"/>
-                    <ToggleButton IsChecked="{Binding AssistiveTouchEnable}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="Default ToggleButton Style" Grid.Column="1"/>
+                    <ToggleButton IsChecked="{Binding AssistiveTouchEnable}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="就是那個寫'Z'的小圓球啦" Grid.Column="1"/>
                     <Label Content="簡繁轉換後進行詞彙修正" Grid.Row="1"/>
-                    <ToggleButton IsChecked="{Binding VocabularyCorrenctionEnable}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="Default ToggleButton Style" Grid.Row="1" Grid.Column="1"  />
+                    <ToggleButton IsChecked="{Binding VocabularyCorrenctionEnable}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="由於有時一個簡體對應到多個繁體字，開啟此功能將會自動修正此問題(但有時不盡人意)" Grid.Row="1" Grid.Column="1"  />
                     <Label Content="轉換完成後提示" Grid.Row="2"/>
-                    <ToggleButton IsChecked="{Binding PromptEnable}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="Default ToggleButton Style" Grid.Row="2" Grid.Column="1"  />
+                    <ToggleButton IsChecked="{Binding PromptEnable}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="轉換後顯示轉換所花費的毫秒數" Grid.Row="2" Grid.Column="1"  />
                     <Label Content="自動判定編碼" Grid.Row="3"/>
-                    <ToggleButton IsChecked="{Binding RecognitionEncodingEnable}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="Default ToggleButton Style" Grid.Row="3" Grid.Column="1"  />
+                    <ToggleButton IsChecked="{Binding RecognitionEncodingEnable}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="試圖自動判定編碼，如果選錯則出現提示(gbk跟big5)" Grid.Row="3" Grid.Column="1"  />
                     <Label Content="檢查版本更新" Grid.Row="4"/>
-                    <ToggleButton IsChecked="{Binding CheckVersion}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="Default ToggleButton Style" Grid.Row="4" Grid.Column="1"  />
+                    <ToggleButton IsChecked="{Binding CheckVersion}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="開啟程式時，自動檢查更新，如果有更新則出現提示" Grid.Row="4" Grid.Column="1"  />
                     <Separator Style="{StaticResource MaterialDesignLightSeparator}" Grid.Row="4" Grid.ColumnSpan="2" />
                     <Label Content="預覽最大長度(k)" Grid.Row="5" VerticalAlignment="Bottom"/>
                     <TextBox Text="{Binding MaxPriviewLength}" materialDesign:HintAssist.Hint="預覽最大長度" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Grid.Row="5" Grid.Column="1" HorizontalContentAlignment="Center" />
@@ -198,12 +198,12 @@
                     <DockPanel Grid.Row="0">
                         <materialDesign:PackIcon Kind="ContentCopy" Height="23" />
                         <Label Content="自動複製" VerticalAlignment="Bottom"/>
-                        <ToggleButton IsChecked="{Binding AutoCopy}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="Default ToggleButton Style" VerticalAlignment="Bottom" />
+                        <ToggleButton IsChecked="{Binding AutoCopy}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="按下快捷鍵後，會自動複製選取的文字" VerticalAlignment="Bottom" />
                     </DockPanel>
                     <DockPanel Grid.Row="1">
                         <materialDesign:PackIcon Kind="ContentPaste" Height="23" />
                         <Label Content="自動貼上" VerticalAlignment="Bottom"/>
-                        <ToggleButton IsChecked="{Binding AutoPaste}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="Default ToggleButton Style" VerticalAlignment="Bottom" />
+                        <ToggleButton IsChecked="{Binding AutoPaste}" Style="{StaticResource MaterialDesignSwitchToggleButton}" ToolTip="按下快捷鍵後，會在轉換後自動貼上" VerticalAlignment="Bottom" />
                     </DockPanel>
                     <Border Grid.Row="2" BorderBrush="#33000000" BorderThickness="0,1" Margin="0,10,0,0">
                         <Grid>
