--- a/ConvertZZ/Moudle/Window_MessageBoxEx.xaml
+++ b/ConvertZZ/Moudle/Window_MessageBoxEx.xaml
@@ -5,11 +5,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" materialDesign:ShadowAssist.CacheMode="{x:Null}"
+        Name="thisWindows" MouseDown="ThisWindows_MouseDown"
         Title="Window_MessageBoxEx" MinHeight="150" Width="380" Background="Transparent" AllowsTransparency="True" WindowStartupLocation="CenterScreen"  WindowStyle="None" Topmost="True" SizeToContent="WidthAndHeight" Foreground="#00000000" ResizeMode="NoResize">
 
     <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth1" Margin="3"  VerticalAlignment="Stretch">
         <Grid>
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
@@ -19,11 +21,13 @@
                 <ColumnDefinition/>
                 <ColumnDefinition Width="{Binding Button3_Width}"/>
             </Grid.ColumnDefinitions>
-            <TextBlock TextWrapping="Wrap" Text="{Binding TextBlock_Text}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" Foreground="Black" />
-            <CheckBox Content="{Binding CheckBox_Text,Mode=TwoWay}" IsChecked="{Binding CheckBox_IsChecked}" Visibility="{Binding CheckBox_Visibility}" Grid.Row="1" Grid.ColumnSpan="3" Foreground="Black" Margin="10"/>
-            <Button Content="{Binding ButtonText1,Mode=TwoWay}" Grid.Row="2" Grid.Column="0" Margin="10" Click="Button_Click"/>
-            <Button Content="{Binding ButtonText2,Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="10" Click="Button_Click_1"/>
-            <Button Content="{Binding ButtonText3,Mode=TwoWay}" Grid.Row="2" Grid.Column="2" Margin="10" Click="Button_Click_2" Visibility="{Binding Button3_Visibility}"/>
+            <TextBlock Text="{Binding ElementName=thisWindows,Path=Title}" Style="{StaticResource MaterialDesignTitleTextBlock}" Foreground="Black" Margin="12" Grid.ColumnSpan="3"/>
+            <Separator VerticalAlignment="Bottom" Grid.ColumnSpan="3" Margin="10 0 10 3"/>
+            <TextBlock TextWrapping="Wrap" Text="{Binding TextBlock_Text}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Margin="12 12 12 30" Foreground="Black" Style="{StaticResource MaterialDesignSubheadingTextBlock}"/>
+            <CheckBox Content="{Binding CheckBox_Text,Mode=TwoWay}" IsChecked="{Binding CheckBox_IsChecked}" Visibility="{Binding CheckBox_Visibility}" Grid.Row="2" Grid.ColumnSpan="3" Foreground="Black" Margin="10"/>
+            <Button Content="{Binding ButtonText1,Mode=TwoWay}" Grid.Row="3" Grid.Column="0" Margin="10" Click="Button_Click"/>
+            <Button Content="{Binding ButtonText2,Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="10" Click="Button_Click_1"/>
+            <Button Content="{Binding ButtonText3,Mode=TwoWay}" Grid.Row="3" Grid.Column="2" Margin="10" Click="Button_Click_2" Visibility="{Binding Button3_Visibility}"/>
         </Grid>
     </materialDesign:Card>
 </Window>
