treeview預設為不展開所有子選項，以改善使用者體驗，避免一次載入過多而使視窗卡死

--- a/ConvertZZ/CheckboxTreeView.xaml
+++ b/ConvertZZ/CheckboxTreeView.xaml
@@ -10,7 +10,7 @@
         <TreeView ItemsSource="{Binding ItemSources,Mode=TwoWay}" VirtualizingStackPanel.IsVirtualizing="True">
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
-                    <Setter Property="IsExpanded" Value="True"/>
+                    <Setter Property="IsExpanded" Value="False"/>
                 </Style>
             </TreeView.ItemContainerStyle>
             <TreeView.Resources>
