--- a/ConvertZZ/MainWindow.xaml
+++ b/ConvertZZ/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="64" Width="64" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None" 
         AllowsTransparency="True" Background="Transparent"
         MouseDown="Window_MouseDown" MouseUp="Window_MouseUp" 
-        Closing="Window_Closing" materialDesign:ShadowAssist.CacheMode="{x:Null}"
+        Loaded="Window_Loaded" Closing="Window_Closing" materialDesign:ShadowAssist.CacheMode="{x:Null}"
         Topmost="True" AllowDrop="True" Drop="Window_Drop" 
         DragDrop.DragEnter="Window_DragEnter"
         >
