支援"傳送到"的功能

--- a/ConvertZZ/Window_DialogHost.xaml
+++ b/ConvertZZ/Window_DialogHost.xaml
@@ -48,6 +48,9 @@
                         </DockPanel>
                     </materialDesign:ColorZone>
                     <DockPanel HorizontalAlignment="Right" VerticalAlignment="Top">
+                        <Button Click="Button_CreateShortCut" Visibility="{Binding CreateShortcutVisibility}" BorderBrush="Transparent" Background="Transparent">
+                            <materialDesign:PackIcon Kind="Share" />
+                        </Button>
                         <Button Click="Button_Minimize" BorderBrush="Transparent" Background="Transparent">
                             <materialDesign:PackIcon Kind="WindowMinimize" />
                         </Button>
